--- a/config.json
+++ b/config.json
@@ -119,12 +119,12 @@
         "api": "https://hsckzy.vip",
         "name": "黄色仓库"
         "adult": true
-        "detail": 'https://hsckzy.vip'
+        "detail": "https://hsckzy.vip"
     },
     "yutu": {
         "api": "https://yutuzy10.com",
         "name": "玉兔资源"
-        adult: true
+        "adult": true
     },
 
     "subo": {
